Wed Jan 21 03:22:43 1998  Harri Porten  <porten@tu-harburg.de>

	* prevented the password from being left in kppprc after the
 	option 'Store password' has just been turned off
	
	* the ID & password field will be disabled if no account has
	been created yet

	* pppdata.cpp: removed absolute path for default log viewer
	to prevent warning messages upon first startup if KDE's location
 	differs from /usr/local/kde

	* removed gpppdata.Id() and gpppdata.setId() since they have been
	replaced by storedUsername() and setStoredUsername()

Tue Jan 20 15:30:08 1998  Mario Weilguni  <mweilguni@sime.com>

	* Sigh. After unintentionally deleting my account for the sixth
	time, I added a yesNo() dialog to confirm deleting an
	account. This is VERY important, because if you click on "Show
	log" and double-click onto a file to view it and you have the bad
	luck that the filename is just over the "Delete" button, the
	account will be gone.

	* runtests.cpp: gpppdata is now saved after modifications in
	runtests(), and the default log viewer is set correctly

Tue Jan 20 03:10:35 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* tried to get the docking window to display tooltip with transfer
	bytes statistice. Failed. Need to contact Matthias about it.
       
	* Removed the 'Dock' button. It is superfluous. Use the window
	close button to hide the window.

	* fixed the flicker problem that was reintroduced in pppstatdlg.cpp

	* fixed ( hopefully ) a hangup problem on busy redial caused
	by the  modem_in_connect_state varible in connect.cpp

Mon Jan 19 17:51:16 1998  Mario Weilguni  <mweilguni@sime.com>

	* main.cpp: the setup dialog is now created on demand. Since in
	most cases we only dial out, creating the setup dialog is a waste
	of CPU and memory. This reduces memory by approx 200KB.

	* geometry managment added to PPP statistic window

	* tried to minimize dependencies on "main.h" by removing unneeded
	#includes
