@@ -1,3 +1,7 @@
+Fri Jan 23 01:32:57 1998  Harri Porten  <porten@tu-harburg.de>
+
+	* fixed alignment in conwindow.cpp's layout.
+
 Wed Jan 21 03:22:43 1998  Harri Porten  <porten@tu-harburg.de>
 
 	* prevented the password from being left in kppprc after the
